<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cvContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/mushroom"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">
            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_favorite_24"
                android:layout_alignParentLeft="true"/>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                >
                <TextView
                    android:id="@+id/tvNombreCV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nombre"
                    android:textSize="20dp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvTelefonoCV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/telefono"
                    />

            </LinearLayout>
                <TextView
                    android:id="@+id/tvLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plikes"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"/>
        </RelativeLayout>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>